--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   @font-face {
     font-family: HmmCavalryRegular;
-    src: url(https://cdn.discordapp.com/attachments/869668272650465290/959221241267515402/Hmmcavalryfont-Regular.otf);
+    src: url(https://github.com/allsitesrandom/font-pix/blob/401da011de466e7b287faed02edf862d1980e9fd/Hmmcavalryfont-Regular.otf);
   }
   
   .fundo {
